renamed css/bootstrap.min.css --> library/css/bootstrap-2-3-2.min.css and removed css/bootstrap.css

--- a/acknowledge_license_cert.html
+++ b/acknowledge_license_cert.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <title>Acknowledgments, Licensing and Certification</title>
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/bootstrap.css" rel="stylesheet">
+<link href="library/css/bootstrap-2-3-2.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -275,6 +274,11 @@ Pieter W. Blankevoort</td>
 Richard Mishler<br>
 Eclectic Domain</td>
 <td><a href="http://www.rmishler.com/">www.rmishler.com</a></td>
+</tr>
+
+<tr>
+<td>Rosion Versace Dzian</td>
+<td>rozion_dzian@yahoo.fr</td>
 </tr>
 
 <tr>
